src/main/java/com/lbd/example/error/ErrorCode.java
package com.lbd.example.error;

public final class ErrorCode {



    /**
     * validation error.
     */
    public static final int VALIDATION_ERROR = 1;
    /**
     * user found error.
     */
    public static final int USER_FOUND = 2;

    /**
     * crypto error.
     */
    public static final int CRYPTO_ERROR = 3;
}
